--- a/default.project.json
+++ b/default.project.json
@@ -1,5 +1,5 @@
 {
-  "name": "import",
+  "name": "sugar",
   "tree": {
     "$className": "DataModel",
 
@@ -24,7 +24,7 @@
         "$path": "lib/TestEz"
       },
 
-      "import": {
+      "sugar": {
         "$path": "src"
       }
     },
